--- a/.xmake/windows/x64/xmake.conf
+++ b/.xmake/windows/x64/xmake.conf
@@ -26,7 +26,7 @@
     ccache = true,
     host = "windows",
     kind = "static",
-    mode = "release",
+    mode = "debug",
     ndk_stdcxx = true,
     plat = "windows",
     vs = "2022"
